--- a/2023-main/coxadoido.css
+++ b/2023-main/coxadoido.css
@@ -1,3 +1,10 @@
 .coxa{
-    background: green;
+    background: rgb(53, 153, 53);
+    text-align: center;
+    color:rgb(255, 255, 255)
+  
+}   
+.imagem2{
+    height: 496px;
+    width: 500px;
 }
